# spec-to-proof

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/adr/: 0001-cargo-workspace-and-optional-bazel.md  0002-ci-layout.md  0003-secrets-and-compose.md  0004-opentelemetry-upgrade-path.md
e2e/gh-fixtures/: README.md
ingest/: Cargo.toml
ingest/src/: lib.rs  proto.rs  secrets.rs
ingest/src/connectors/: confluence.rs  gdocs.rs  jira.rs
ingest/tests/: e2e_integration_test.rs
lean-farm/: Cargo.toml  README.md
nlp/: Cargo.toml  Language_Variation_Analysis.md
nlp/prompts/: invariant_extraction.md
nlp/src/: cache.rs  claude_client.rs  extractor.rs  lib.rs  pii_redactor.rs  post_processor.rs  prompts.rs  proto.rs
nlp/tests/: invariant_extraction_test.rs  language_variation_test.rs
platform/ui/: README.md
proof/: Cargo.toml  README.md
proof/lean/: lakefile.lean
proof/lean/SpecToProof/: TrivialExample.lean
proof/src/: claude_client.rs  compiler.rs  lib.rs  prompts.rs  proto.rs  s3_storage.rs
proof/tests/: lean_compiler_test.rs
proto/: Cargo.toml  README.md  build.rs  proof_service.proto
proto/src/: lib.rs
scripts/: ci-lint.ps1  ci-lint.sh  run-in-platform-ui.mjs
