[package]
name = "nlp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Invariant extraction NLP pipeline"

[features]
default = []
# Opt-in: legacy integration tests that need AWS/Dynamo and refreshed fixtures.
legacy-integration-tests = []

[dependencies]
spec-to-proof-proto = { path = "../proto" }
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
aws-config = "~1.5"
aws-sdk-dynamodb = "~1.110"
regex = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "invariant_extractor"
path = "src/bin/invariant_extractor.rs"
