[package]
name = "proof"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lean proof generation and proof service"

[dependencies]
spec-to-proof-proto = { path = "../proto" }
tokio = { version = "1", features = ["full", "sync"] }
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.10"
prost-types = "0.12"
reqwest = { version = "0.11", features = ["json"] }
aws-config = "~1.8"
aws-sdk-s3 = "~1.40"
aws-sdk-kms = "~1.40"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "lean_compiler"
path = "src/bin/lean_compiler.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
futures = "0.3"
